--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,9 @@
     <data>
 
         <variable
+            name="handler"
+            type="com.theapache64.swipenetic.ui.activities.main.MainHandler" />
+        <variable
             name="viewModel"
             type="com.theapache64.swipenetic.ui.activities.main.MainViewModel" />
     </data>
