--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable
+            name="handler"
+            type="com.theapache64.swipenetic.ui.activities.splash.SplashHandler" />
+
+        <variable
+            name="viewModel"
+            type="com.theapache64.swipenetic.ui.activities.splash.SplashViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
@@ -39,10 +50,5 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <data>
 
-        <variable
-            name="viewModel"
-            type="com.theapache64.swipenetic.ui.activities.splash.SplashViewModel" />
-    </data>
 </layout>
