--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.theapache64.swipenetic.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_change_date"
+        android:icon="@drawable/ic_baseline_calendar_white"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:title="@string/action_change_date"
+        app:showAsAction="always" />
 </menu>
