--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,7 @@
         <include
             android:id="@+id/i_content_main"
             layout="@layout/content_main"
+            bind:handler="@{handler}"
             bind:viewModel="@{viewModel}" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
@@ -43,6 +44,7 @@
         <variable
             name="handler"
             type="com.theapache64.swipenetic.ui.activities.main.MainHandler" />
+
         <variable
             name="viewModel"
             type="com.theapache64.swipenetic.ui.activities.main.MainViewModel" />
