--- a/app/src/main/res/layout/item_swipe_session.xml
+++ b/app/src/main/res/layout/item_swipe_session.xml
@@ -34,6 +34,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/grey_900"
                 android:textSize="34sp"
+                android:text="@{swipeSession.duration}"
                 app:layout_constraintEnd_toEndOf="@id/tv_swipe_type"
                 app:layout_constraintStart_toStartOf="@id/tv_swipe_type"
                 app:layout_constraintTop_toBottomOf="@id/tv_swipe_type"
