--- a/app/src/main/res/layout/item_swipe_session.xml
+++ b/app/src/main/res/layout/item_swipe_session.xml
@@ -22,6 +22,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:text="@{swipeSession.type.name()}"
+                android:textSize="10sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -30,11 +31,12 @@
             <!--Duration-->
             <TextView
                 android:id="@+id/tv_swipe_duration"
+                fontPath="fonts/GoogleSans-Medium.ttf"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:text="@{swipeSession.durationString}"
                 android:textColor="@color/grey_900"
-                android:textSize="34sp"
-                android:text="@{swipeSession.duration}"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="@id/tv_swipe_type"
                 app:layout_constraintStart_toStartOf="@id/tv_swipe_type"
                 app:layout_constraintTop_toBottomOf="@id/tv_swipe_type"
@@ -61,6 +63,7 @@
                 android:gravity="center"
                 android:text="@string/label_to"
                 android:textColor="@color/grey_500"
+                android:textSize="10sp"
                 app:layout_constraintBottom_toBottomOf="@id/tv_from"
                 app:layout_constraintEnd_toStartOf="@id/tv_to"
                 app:layout_constraintStart_toEndOf="@id/tv_from"
@@ -83,7 +86,7 @@
                 android:id="@+id/v_type_bg"
                 android:layout_width="0dp"
                 android:layout_height="2dp"
-                android:layout_marginTop="18dp"
+                android:layout_marginTop="12dp"
                 android:background="@{swipeSession.isTypeIn() ? @color/green_500 : @color/red_500}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
