--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,10 +2,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.theapache64.swipenetic.MainActivity">
+
+    <item
+        android:id="@+id/action_show_summary"
+        android:icon="@drawable/ic_bar_chart_black"
+        android:orderInCategory="1"
+        android:title="@string/action_show_summary"
+        app:showAsAction="always" />
+
     <item
         android:id="@+id/action_change_date"
         android:icon="@drawable/ic_baseline_calendar_white"
-        android:orderInCategory="100"
+        android:orderInCategory="1"
         android:title="@string/action_change_date"
         app:showAsAction="always" />
 </menu>
