👕 rename SwipeTag to SwipeOutTag

--- a/app/src/main/res/layout/item_swipe_session.xml
+++ b/app/src/main/res/layout/item_swipe_session.xml
@@ -33,8 +33,8 @@
                 style="@style/SwipeSessionTag"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{swipeSession.tag.label}"
-                android:visibility="@{swipeSession.tag==null ? View.GONE : View.VISIBLE}"
+                android:text="@{swipeSession.outTag.label}"
+                android:visibility="@{swipeSession.outTag==null ? View.GONE : View.VISIBLE}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="Table Tennis" />
