--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,6 +12,8 @@
         <variable
             name="viewModel"
             type="com.theapache64.swipenetic.ui.activities.main.MainViewModel" />
+
+        <import type="android.view.View" />
     </data>
 
     <com.theapache64.twinkill.ui.widgets.CustomSwipeRefreshLayout
@@ -40,7 +42,7 @@
                 android:id="@+id/g_content_main"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:constraint_referenced_ids="cv_total_in_time,rv_swipe_sessions" />
+                app:constraint_referenced_ids="rv_swipe_sessions" />
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cv_total_in_time"
@@ -67,6 +69,37 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
+
+                    <!--Left icon-->
+                    <ImageButton
+                        android:id="@+id/ib_prev_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="?android:attr/selectableItemBackground"
+                        android:onClick="@{()->handler.onPrevDateClicked()}"
+                        android:padding="8dp"
+                        android:src="@drawable/ic_chevron_left_black_24dp"
+                        android:tint="@color/grey_800"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:ignore="ContentDescription" />
+
+                    <!--Right icon-->
+                    <ImageButton
+                        android:id="@+id/ib_next_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="?android:attr/selectableItemBackground"
+                        android:onClick="@{()->handler.onNextDateClicked()}"
+                        android:padding="8dp"
+                        android:src="@drawable/ic_chevron_right_black_24dp"
+                        android:tint="@color/grey_800"
+                        android:visibility="@{viewModel.isNextDateAvailable ? View.VISIBLE : View.GONE}"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:ignore="ContentDescription" />
 
 
                     <TextView
