--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,6 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.theapache64.swipenetic.MainActivity">
 
+    <item
+        android:id="@+id/action_add_session"
+        android:icon="@drawable/ic_add_white_24dp"
+        android:title="@string/action_add_session"
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/action_change_date"
